force-app/main/default/objects/Commodity__c/Commodity__c.object-meta.xml
<CustomObject>
    <label>Commodity</label>
    <nameField>
        <label>Commodity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commodities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>