force-app/main/default/objects/Commodity__c/fields/CountComment__c.field-meta.xml
<CustomField>
    <fullName>CountComment__c</fullName>
    <label>CountComment</label>
    <summaryForeignKey>Comment__c.Commodity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>