force-app/main/default/objects/Commodity__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <formula>if(CountComment__c = 0, 0, SumCommentMarks__c /  CountComment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>