force-app/main/default/objects/Commodity__c/fields/SumCommentMarks__c.field-meta.xml
<CustomField>
    <fullName>SumCommentMarks__c</fullName>
    <label>SumCommentMarks</label>
    <summarizedField>Comment__c.Mark__c</summarizedField>
    <summaryForeignKey>Comment__c.Commodity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>